--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
     "com.unity.collab-proxy": "2.0.7",
+    "com.unity.connect.share": "4.2.3",
     "com.unity.ide.rider": "3.0.25",
     "com.unity.ide.visualstudio": "2.0.21",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.render-pipelines.universal": "12.1.11",
+    "com.unity.services.cloudcode": "2.5.0",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.5",
